Fix Junit Testcases